WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
287072
Deploy more smart pointers in NetworkLoadChecker.cpp
https://bugs.webkit.org/show_bug.cgi?id=287072
Summary
Deploy more smart pointers in NetworkLoadChecker.cpp
Ryosuke Niwa
Reported
2025-02-04 23:32:06 PST
Address smart pointer static analyzer warnings in NetworkLoadChecker.cpp.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-02-04 23:37:43 PST
Pull request:
https://github.com/WebKit/WebKit/pull/40039
EWS
Comment 2
2025-02-05 11:24:36 PST
Committed
289882@main
(15a17b3f64a7): <
https://commits.webkit.org/289882@main
> Reviewed commits have been landed. Closing PR #40039 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-02-05 11:25:22 PST
<
rdar://problem/144248380
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug