Deploy more smart pointers in NetworkLoadChecker.cpp https://bugs.webkit.org/show_bug.cgi?id=287072

Reviewed by Chris Dumez.

Addressed smart pointer static analyzer warnings.

* Source/WebKit/NetworkProcess/NetworkLoadChecker.cpp:
(WebKit::NetworkLoadChecker::protectedCORSPreflightChecker const):
(WebKit::NetworkLoadChecker::protectedOrigin const):
(WebKit::NetworkLoadChecker::checkTAO):
(WebKit::NetworkLoadChecker::continueCheckingRequest):
(WebKit::NetworkLoadChecker::checkCORSRedirectedRequest):
(WebKit::NetworkLoadChecker::checkCORSRequestWithPreflight):
(WebKit::NetworkLoadChecker::contentSecurityPolicy):
(WebKit::NetworkLoadChecker::processContentRuleListsForLoad):
* Source/WebKit/NetworkProcess/NetworkLoadChecker.h:
* Source/WebKit/SaferCPPExpectations/UncountedCallArgsCheckerExpectations:

Canonical link: https://commits.webkit.org/289882@main